--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "@progress/kendo-theme-default": "^11.0.2",
     "@progress/kendo-theme-utils": "^11.0.2",
     "next": "15.3.4",
+    "next-images": "^1.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@svgr/webpack": "^8.1.0"
+    "@svgr/webpack": "^8.1.0",
+    "url-loader": "^4.1.1"
   }
 }
