--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -55,10 +55,10 @@
     "@progress/kendo-svg-icons": "^4.3.0",
     "@progress/kendo-theme-default": "^11.0.2",
     "@progress/kendo-theme-utils": "^11.0.2",
-    "next": "15.3.4",
+    "next": "^14.0.4",
     "next-images": "^1.8.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
