--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,16 @@
       "src": "package.json",
       "use": "@vercel/next"
     }
+  ],
+  "headers": [
+    {
+      "source": "/portfolio-new.png",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
   ]
 }
